@@ -252,6 +252,7 @@ namespace spot
     int det_max_states_ = -1;
     int det_max_edges_ = -1;
     int simul_ = -1;
+    int simul_method_ = -1;
     int scc_filter_ = -1;
     int ba_simul_ = -1;
     bool tba_determinisation_ = false;
